--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@
       type="text/javascript"
       src="https://unpkg.com/vue@3/dist/vue.global.js"
     ></script>
+    <script type="text/javascript" src="/frontend/app.js"></script>
   </head>
 
   <body>
