--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,15 +12,27 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/frontend/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script
       type="text/javascript"
       src="https://unpkg.com/vue@3/dist/vue.global.js"
     ></script>
-    <script type="text/javascript" src="/frontend/app.js"></script>
+    <script type="text/javascript" src="./app.js" defer></script>
   </head>
 
   <body>
-    <div id="app">{{ message }}</div>
+    <div
+      id="app"
+      class="d-flex flex-row flex-wrap justify-content-center align-items-center gap-5 p-5"
+    >
+      <div v-for="ap in api">
+        <div class="text-center">
+          <div><img id="image" :src="ap.poster" alt="" /></div>
+          <div>{{ ap.title }}</div>
+          <div>{{ ap.author }}</div>
+          <div>{{ ap.genre }}</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
